--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -1,7 +1,135 @@
 {
+    "CREATE": {
+        "ACTION_BAR_TITLE": "Create New Account",
+        "DONE": "Done",
+        "GENERATE_AGAIN": "Generate Again",
+        "INFO_SEED": "Tap and swipe over this area!",
+        "INFO_SEED_FINISHED": "Seed collected!",
+        "INFO_STEP_ONE": "First, create a random seed for the generation of your passphrase!",
+        "INFO_STEP_TWO": "Now you have to memorize all 12 words of your passphrase in the right order!",
+        "INFO_STEP_TWO_ACTION": "Write down the following words separated by space and keep them secret!",
+        "INFO_STEP_THREE": "Please reenter the words of your passphrase!",
+        "INFO_STEP_THREE_ACTION": "Write down word #{{value}} and select it!",
+        "INFO_STEP_FOUR": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
+        "PIN_INPUT_HINT": "PIN",
+        "POSSIBILITY_INPUT_HINT": "Word #{{value}}",
+        "NEXT": "Next"
+    },
+    "IMPORT" : {
+        "ACTION_BAR_TITLE": "Import Existing Account",
+        "ACTIVE_ACCOUNT": "Active Account",
+        "ACTIVE_ACCOUNT_DESCRIPTION": "An active account offers full functionality. You can send and receive Burstcoins. In addition, you can check your balance and see the history of your transactions.",
+        "ACTIVE_ACCOUNT_INPUT_HINT": "Passphrase",
+        "ACTIVE_ACCOUNT_PIN_INFO": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
+        "DONE": "Done",
+        "IMPORT": "Import",
+        "INFO": "Import an active account by entering its passphrase! Otherwise, import an offline account by entering its Burstcoin address!",
+        "NEXT": "Next",
+        "OFFLINE_ACCOUNT": "Offline Account",
+        "OFFLINE_ACCOUNT_DESCRIPTION": "An offline account offers the same functionality than an active account, except you cannot send Burstcoins to another address.",
+        "OFFLINE_ACCOUNT_INPUT_HINT": "BURST-XXXX-XXXX-XXXX-XXXXX",
+        "PIN_INPUT_HINT": "PIN",
+        "SHOW" : {
+            "QUESTION": "Is this your Burst address?"
+        }
+    },
+    "TABS": {
+        "ACCOUNTS": {
+            "ACTIVATE": {
+                "DONE": "Done",
+                "ENTER_PASSPHRASE": "Enter the passphrase of the account {{value}} here!",
+                "ENTER_PIN": "Set a six-digit PIN code!",
+                "PASSPHRASE_INPUT_HINT": "Passphrase",
+                "PIN_INPUT_HINT": "Pin",
+                "NEXT": "Next"
+            },
+            "BALANCE": "Balance",
+            "CREATE": "Create",
+            "IMPORT": "Import",
+            "REMOVE": "Do you really want to remove this account?",
+            "TITLE": "Accounts"
+        },
+        "BALANCE": {
+            "ACTIVATE": "Activate",
+            "BALANCE": "Balance",
+            "SEND": "Send",
+            "TITLE": "Balance"
+        },
+        "HISTORY": {
+            "TITLE": "History"
+        },
+        "SETTINGS": {
+            "ABOUT": {
+                "ABOUT": "About",
+                "ASSOCIATION": "In Association with",
+                "DEVELOPED": "Developed by",
+                "TWITTER": "Follow us on twitter to get updates on our projects!",
+                "VERSION": "Version"
+            },
+            "CURRENCY": {
+                "CURRENCY": "Currency"
+            },
+            "DOCUMENTATION": {
+                "DOCUMENTATION": "Documentation"
+            },
+            "LANGUAGE": {
+                "LANGUAGE": "Language"
+            },
+            "NODE": {
+                "INFO": "The Burst node is used to communicate with the Burst network",
+                "NODE": "Node"
+            },
+            "SUPPORT": {
+                "CONTRIBUTION": "We are also happy for non-monetary contributions",
+                "DONATE": "You like our app? Support us by donating BURST!",
+                "SUPPORT": "Support"
+            },
+            "TITLE": "Settings"
+        }
+    },
+    "SEND": {
+        "ACCEPT": "Accept",
+        "AMOUNT": "Amount",
+        "BALANCE": "Balance",
+        "FEE": "Fee",
+        "RECIPIENT": "Recipient",
+        "PIN_INPUT_HINT": "Pin",
+        "VERIFY": "Verify"
+    },
     "START" : {
         "CREATE": "Erstellen",
         "IMPORT": "Importieren",
         "INFO": "Keine Account wurde bisher erstellt! Importiere einen bestehenden Account oder erstelle einen Neuen!"
+    },
+    "NOTIFICATIONS" : {
+        "ADDRESS": "Please enter a valid Burstcoin address!",
+        "COPIED": "Copied address {{value}} to clipboard!",
+        "DECIMAL_AMOUNT": "Please enter a decimal number for the amount of BURST you want to send!",
+        "DECIMAL_FEE": "Please enter a decimal number (atleast 1) as fee!",
+        "ENTER_SOMETHING": "Please enter something!",
+        "EXCEED": "Amount and Fee exceed your balance!",
+        "PIN": "Please enter a six-digit number as Pin!",
+        "REMOVE": "Successfully removed account!",
+        "SELECTED": "Selected account: {{value}}",
+        "TRANSACTION": "Transaction successful!",
+        "UPDATE_CURRENCY": "Currency successfully updated!",
+        "UDPDATE_LANGUAGE": "Language successfully updated!",
+        "UPDATE_NODE": "Node successfully updated!",
+        "WRONG_PASSPHRASE": "Wrong passphrase! The provided passphrase does not generate the public key assigned to your account!",
+        "WRONG_PIN": "The provided pin does not match the account's pin",
+        "ERRORS": {
+            "ACCOUNT_ID": "Cannot generate account id from public key!",
+            "ADDRESS": "Cannot generate BURST address from account id!",
+            "CONNECTION": "Failed fetching data. Check your internet connection!",
+            "CURRENCY": "Currency update failed!",
+            "KEYPAIR": "Failed to generate keypair for passphrase!",
+            "LANGUAGE": "Language change failed!",
+            "NODE": "Node update failed!",
+            "QR_CODE": "Could not scan QR code!",
+            "REDIRECT": "Cannot open send BURST page! Current account is not active!",
+            "REMOVE": "Could not remove account!",
+            "UPDATE": "Update of account failed!",
+            "UNKNOWN_ACCOUNT": "Account is still unknown! No transactions yet!"
+        }
     }
 }
