--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -3,13 +3,13 @@
         "ACTION_BAR_TITLE": "Create New Account",
         "DONE": "Done",
         "GENERATE_AGAIN": "Generate Again",
-        "INFO_SEED": "Tap and swipe over this area!",
-        "INFO_SEED_FINISHED": "Seed collected!",
-        "INFO_STEP_ONE": "First, create a random seed for the generation of your passphrase!",
-        "INFO_STEP_TWO": "Now you have to memorize all 12 words of your passphrase in the right order!",
-        "INFO_STEP_TWO_ACTION": "Write down the following words separated by space and keep them secret!",
-        "INFO_STEP_THREE": "Please reenter the words of your passphrase!",
-        "INFO_STEP_THREE_ACTION": "Write down word #{{value}} and select it!",
+        "INFO_SEED": "Tap and swipe over this area !",
+        "INFO_SEED_FINISHED": "Seed collected !",
+        "INFO_STEP_ONE": "First, create a random seed for the generation of your passphrase !",
+        "INFO_STEP_TWO": "Now you have to memorize all 12 words of your passphrase in the right order !",
+        "INFO_STEP_TWO_ACTION": "Write down the following words separated by space and keep them secret !",
+        "INFO_STEP_THREE": "Please enter the words of your passphrase again !",
+        "INFO_STEP_THREE_ACTION": "Write down word #{{value}} and select it !",
         "INFO_STEP_FOUR": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
         "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Word #{{value}}",
@@ -23,22 +23,22 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
         "DONE": "Done",
         "IMPORT": "Import",
-        "INFO": "Import an active account by entering its passphrase! Otherwise, import an offline account by entering its Burstcoin address!",
+        "INFO": "Import an active account by entering its passphrase ! Otherwise, import an offline account by entering its Burstcoin address !",
         "NEXT": "Next",
         "OFFLINE_ACCOUNT": "Offline Account",
         "OFFLINE_ACCOUNT_DESCRIPTION": "An offline account offers the same functionality than an active account, except you cannot send Burstcoins to another address.",
         "OFFLINE_ACCOUNT_INPUT_HINT": "BURST-XXXX-XXXX-XXXX-XXXXX",
         "PIN_INPUT_HINT": "PIN",
         "SHOW" : {
-            "QUESTION": "Is this your Burst address?"
+            "QUESTION": "Is this your Burst address ?"
         }
     },
     "TABS": {
         "ACCOUNTS": {
             "ACTIVATE": {
                 "DONE": "Done",
-                "ENTER_PASSPHRASE": "Enter the passphrase of the account {{value}} here!",
-                "ENTER_PIN": "Set a six-digit PIN code!",
+                "ENTER_PASSPHRASE": "Enter the passphrase of the account {{value}} here !",
+                "ENTER_PIN": "Set a six-digit PIN code !",
                 "PASSPHRASE_INPUT_HINT": "Passphrase",
                 "PIN_INPUT_HINT": "Pin",
                 "NEXT": "Next"
@@ -46,7 +46,7 @@
             "BALANCE": "Balance",
             "CREATE": "Create",
             "IMPORT": "Import",
-            "REMOVE": "Do you really want to remove this account?",
+            "REMOVE": "Do you really want to remove this account ?",
             "TITLE": "Accounts"
         },
         "BALANCE": {
@@ -63,7 +63,7 @@
                 "ABOUT": "About",
                 "ASSOCIATION": "In Association with",
                 "DEVELOPED": "Developed by",
-                "TWITTER": "Follow us on twitter to get updates on our projects!",
+                "TWITTER": "Follow us on twitter to get updates on our projects !",
                 "VERSION": "Version"
             },
             "CURRENCY": {
@@ -81,7 +81,7 @@
             },
             "SUPPORT": {
                 "CONTRIBUTION": "We are also happy for non-monetary contributions",
-                "DONATE": "You like our app? Support us by donating BURST!",
+                "DONATE": "You like our app ? Support us by donating BURST !",
                 "SUPPORT": "Support"
             },
             "TITLE": "Settings"
@@ -99,37 +99,37 @@
     "START" : {
         "CREATE": "Create",
         "IMPORT": "Import",
-        "INFO": "No account created yet! Choose to import an existing account or create a new one!"
+        "INFO": "No account created yet ! Choose to import an existing account or create a new one !"
     },
     "NOTIFICATIONS" : {
-        "ADDRESS": "Please enter a valid Burstcoin address!",
-        "COPIED": "Copied address {{value}} to clipboard!",
-        "DECIMAL_AMOUNT": "Please enter a decimal number for the amount of BURST you want to send!",
-        "DECIMAL_FEE": "Please enter a decimal number (atleast 1) as fee!",
-        "ENTER_SOMETHING": "Please enter something!",
-        "EXCEED": "Amount and Fee exceed your balance!",
-        "PIN": "Please enter a six-digit number as Pin!",
-        "REMOVE": "Successfully removed account!",
+        "ADDRESS": "Please enter a valid Burstcoin address !",
+        "COPIED": "Copied address {{value}} to clipboard !",
+        "DECIMAL_AMOUNT": "Please enter a decimal number for the amount of BURST you want to send !",
+        "DECIMAL_FEE": "Please enter a decimal number (atleast 1) as fee !",
+        "ENTER_SOMETHING": "Please enter something !",
+        "EXCEED": "Amount and Fee exceed your balance !",
+        "PIN": "Please enter a six-digit number as Pin !",
+        "REMOVE": "Successfully removed account !",
         "SELECTED": "Selected account: {{value}}",
-        "TRANSACTION": "Transaction successful!",
-        "UPDATE_CURRENCY": "Currency successfully updated!",
-        "UDPDATE_LANGUAGE": "Language successfully updated!",
-        "UPDATE_NODE": "Node successfully updated!",
-        "WRONG_PASSPHRASE": "Wrong passphrase! The provided passphrase does not generate the public key assigned to your account!",
-        "WRONG_PIN": "The provided pin does not match the account's pin",
+        "TRANSACTION": "Transaction successful !",
+        "UPDATE_CURRENCY": "Currency successfully updated !",
+        "UDPDATE_LANGUAGE": "Language successfully updated !",
+        "UPDATE_NODE": "Node successfully updated !",
+        "WRONG_PASSPHRASE": "Wrong passphrase ! The provided passphrase does not generate the public key assigned to your account !",
+        "WRONG_PIN": "The provided pin does not match the account's pin !",
         "ERRORS": {
-            "ACCOUNT_ID": "Cannot generate account id from public key!",
-            "ADDRESS": "Cannot generate BURST address from account id!",
-            "CONNECTION": "Failed fetching data. Check your internet connection!",
-            "CURRENCY": "Currency update failed!",
-            "KEYPAIR": "Failed to generate keypair for passphrase!",
-            "LANGUAGE": "Language change failed!",
-            "NODE": "Node update failed!",
-            "QR_CODE": "Could not scan QR code!",
-            "REDIRECT": "Cannot open send BURST page! Current account is not active!",
-            "REMOVE": "Could not remove account!",
-            "UPDATE": "Update of account failed!",
-            "UNKNOWN_ACCOUNT": "Account is still unknown! No transactions yet!"
+            "ACCOUNT_ID": "Cannot generate account id from public key !",
+            "ADDRESS": "Cannot generate BURST address from account id !",
+            "CONNECTION": "Failed fetching data. Check your internet connection !",
+            "CURRENCY": "Currency update failed !",
+            "KEYPAIR": "Failed to generate keypair for passphrase !",
+            "LANGUAGE": "Language change failed !",
+            "NODE": "Node update failed !",
+            "QR_CODE": "Could not scan QR code !",
+            "REDIRECT": "Cannot open send BURST page! Current account is not active !",
+            "REMOVE": "Could not remove account !",
+            "UPDATE": "Update of account failed !",
+            "UNKNOWN_ACCOUNT": "Account is still unknown ! No transactions yet !"
         }
     }
 }
