--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -1,135 +1,135 @@
 {
     "CREATE": {
-        "ACTION_BAR_TITLE": "Create New Account",
-        "DONE": "Done",
-        "GENERATE_AGAIN": "Generate Again",
-        "INFO_SEED": "Tap and swipe over this area!",
-        "INFO_SEED_FINISHED": "Seed collected!",
-        "INFO_STEP_ONE": "First, create a random seed for the generation of your passphrase!",
-        "INFO_STEP_TWO": "Now you have to memorize all 12 words of your passphrase in the right order!",
-        "INFO_STEP_TWO_ACTION": "Write down the following words separated by space and keep them secret!",
-        "INFO_STEP_THREE": "Please reenter the words of your passphrase!",
-        "INFO_STEP_THREE_ACTION": "Write down word #{{value}} and select it!",
-        "INFO_STEP_FOUR": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
+        "ACTION_BAR_TITLE": "Neues Konto erstellen",
+        "DONE": "Fertig",
+        "GENERATE_AGAIN": "Neu Generieren",
+        "INFO_SEED": "Bewege deinen Finger über diesen Bereich !",
+        "INFO_SEED_FINISHED": "Seed gesammelt !",
+        "INFO_STEP_ONE": "Erzeuge einen zufälligen Seed für die Generierung einer Passphrase !",
+        "INFO_STEP_TWO": "Sichere alle 12 Wörter deiner Passphrase in der richtigen Reihenfolge",
+        "INFO_STEP_TWO_ACTION": "Schreibe die folgenden Wörter, getrennt durch ein Leerzeichen, auf und halte sie geheim !",
+        "INFO_STEP_THREE": "Gebe nun jedes Wort deiner Passphrase nacheinander ein !",
+        "INFO_STEP_THREE_ACTION": "Tippe das Wort an der Stelle #{{value}} ein und wähle es aus !",
+        "INFO_STEP_FOUR": "Setze einen sechsstelligen Pin Code für dein Konto. Der Pin Code wird benutzt um ausgehende Transaktionen zu bestätigen.",
         "PIN_INPUT_HINT": "PIN",
-        "POSSIBILITY_INPUT_HINT": "Word #{{value}}",
-        "NEXT": "Next"
+        "POSSIBILITY_INPUT_HINT": "Wort #{{value}}",
+        "NEXT": "Weiter"
     },
     "IMPORT" : {
-        "ACTION_BAR_TITLE": "Import Existing Account",
-        "ACTIVE_ACCOUNT": "Active Account",
-        "ACTIVE_ACCOUNT_DESCRIPTION": "An active account offers full functionality. You can send and receive Burstcoins. In addition, you can check your balance and see the history of your transactions.",
+        "ACTION_BAR_TITLE": "Bestehendes Konto importieren",
+        "ACTIVE_ACCOUNT": "Aktives Konto",
+        "ACTIVE_ACCOUNT_DESCRIPTION": "Ein aktives Konto bietet volle Funktionalität. Du kannst Burstcoins senden und empfangen. Zudem kannst du deinen Kontostand und deine Transaktionshistorie überprüfen.",
         "ACTIVE_ACCOUNT_INPUT_HINT": "Passphrase",
-        "ACTIVE_ACCOUNT_PIN_INFO": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
-        "DONE": "Done",
-        "IMPORT": "Import",
-        "INFO": "Import an active account by entering its passphrase! Otherwise, import an offline account by entering its Burstcoin address!",
-        "NEXT": "Next",
-        "OFFLINE_ACCOUNT": "Offline Account",
-        "OFFLINE_ACCOUNT_DESCRIPTION": "An offline account offers the same functionality than an active account, except you cannot send Burstcoins to another address.",
+        "ACTIVE_ACCOUNT_PIN_INFO": "Setze einen sechsstelligen Pin Code für dein Konto. Der Pin Code wird benutzt um ausgehende Transaktionen zu verifizieren.",
+        "DONE": "Fertig",
+        "IMPORT": "Importieren",
+        "INFO": "Importiere ein aktives Konto durch Eingabe der zugehörigen Passphrase oder importiere ein Offline Konto durch Eingabe einer Burst Adresse !",
+        "NEXT": "Weiter",
+        "OFFLINE_ACCOUNT": "Offline Konto",
+        "OFFLINE_ACCOUNT_DESCRIPTION": "Ein Offline Konto bietet die selben Funktionalitäten wie ein aktives Konto. Lediglich das Senden von Burstcoins ist nicht möglich.",
         "OFFLINE_ACCOUNT_INPUT_HINT": "BURST-XXXX-XXXX-XXXX-XXXXX",
         "PIN_INPUT_HINT": "PIN",
         "SHOW" : {
-            "QUESTION": "Is this your Burst address?"
+            "QUESTION": "Folgende Adresse importieren ?"
         }
     },
     "TABS": {
         "ACCOUNTS": {
             "ACTIVATE": {
-                "DONE": "Done",
-                "ENTER_PASSPHRASE": "Enter the passphrase of the account {{value}} here!",
-                "ENTER_PIN": "Set a six-digit PIN code!",
+                "DONE": "Fertig",
+                "ENTER_PASSPHRASE": "Gebe die Passphrase des Kontos {{value}} ein !",
+                "ENTER_PIN": "Setze einen sechsstelligen PIN code !",
                 "PASSPHRASE_INPUT_HINT": "Passphrase",
-                "PIN_INPUT_HINT": "Pin",
-                "NEXT": "Next"
+                "PIN_INPUT_HINT": "PIN",
+                "NEXT": "Weiter"
             },
-            "BALANCE": "Balance",
-            "CREATE": "Create",
-            "IMPORT": "Import",
-            "REMOVE": "Do you really want to remove this account?",
-            "TITLE": "Accounts"
+            "BALANCE": "Saldo",
+            "CREATE": "Erstellen",
+            "IMPORT": "Importieren",
+            "REMOVE": "Dieses Konto wirklich entfernen ?",
+            "TITLE": "Konten"
         },
         "BALANCE": {
-            "ACTIVATE": "Activate",
-            "BALANCE": "Balance",
-            "SEND": "Send",
-            "TITLE": "Balance"
+            "ACTIVATE": "Aktivieren",
+            "BALANCE": "Saldo",
+            "SEND": "Senden",
+            "TITLE": "Saldo"
         },
         "HISTORY": {
-            "TITLE": "History"
+            "TITLE": "Historie"
         },
         "SETTINGS": {
             "ABOUT": {
-                "ABOUT": "About",
-                "ASSOCIATION": "In Association with",
-                "DEVELOPED": "Developed by",
-                "TWITTER": "Follow us on twitter to get updates on our projects!",
+                "ABOUT": "Über uns",
+                "ASSOCIATION": "In Zusammenarbeit mit",
+                "DEVELOPED": "Entwickelt von",
+                "TWITTER": "Folge uns auf Twitter für aktuelle Informationen über unsere Projekte !",
                 "VERSION": "Version"
             },
             "CURRENCY": {
-                "CURRENCY": "Currency"
+                "CURRENCY": "Währung"
             },
             "DOCUMENTATION": {
-                "DOCUMENTATION": "Documentation"
+                "DOCUMENTATION": "Dokumentation"
             },
             "LANGUAGE": {
-                "LANGUAGE": "Language"
+                "LANGUAGE": "Sprache"
             },
             "NODE": {
-                "INFO": "The Burst node is used to communicate with the Burst network",
-                "NODE": "Node"
+                "INFO": "Der Burst Endpunkt wird für die Kommunikation mit dem Burst Netzwerk genutzt",
+                "NODE": "Endpunkt"
             },
             "SUPPORT": {
-                "CONTRIBUTION": "We are also happy for non-monetary contributions",
-                "DONATE": "You like our app? Support us by donating BURST!",
-                "SUPPORT": "Support"
+                "CONTRIBUTION": "Wir freuen uns auch über jegliche andere Hilfe",
+                "DONATE": "Du magst unsere App ? Unterstütze uns mit einer Spende !",
+                "SUPPORT": "Unterstützen"
             },
-            "TITLE": "Settings"
+            "TITLE": "Optionen"
         }
     },
     "SEND": {
-        "ACCEPT": "Accept",
-        "AMOUNT": "Amount",
-        "BALANCE": "Balance",
-        "FEE": "Fee",
-        "RECIPIENT": "Recipient",
-        "PIN_INPUT_HINT": "Pin",
-        "VERIFY": "Verify"
+        "ACCEPT": "Akzeptieren",
+        "AMOUNT": "Betrag",
+        "BALANCE": "Saldo",
+        "FEE": "Gebühr",
+        "RECIPIENT": "Empfänger",
+        "PIN_INPUT_HINT": "PIN",
+        "VERIFY": "Verifizieren"
     },
     "START" : {
         "CREATE": "Erstellen",
         "IMPORT": "Importieren",
-        "INFO": "Keine Account wurde bisher erstellt! Importiere einen bestehenden Account oder erstelle einen Neuen!"
+        "INFO": "Kein Konto wurde bisher erstellt ! Importiere ein bestehendes Konto oder erstelle einen Neuen !"
     },
     "NOTIFICATIONS" : {
-        "ADDRESS": "Please enter a valid Burstcoin address!",
-        "COPIED": "Copied address {{value}} to clipboard!",
-        "DECIMAL_AMOUNT": "Please enter a decimal number for the amount of BURST you want to send!",
-        "DECIMAL_FEE": "Please enter a decimal number (atleast 1) as fee!",
-        "ENTER_SOMETHING": "Please enter something!",
-        "EXCEED": "Amount and Fee exceed your balance!",
-        "PIN": "Please enter a six-digit number as Pin!",
-        "REMOVE": "Successfully removed account!",
-        "SELECTED": "Selected account: {{value}}",
-        "TRANSACTION": "Transaction successful!",
-        "UPDATE_CURRENCY": "Currency successfully updated!",
-        "UDPDATE_LANGUAGE": "Language successfully updated!",
-        "UPDATE_NODE": "Node successfully updated!",
-        "WRONG_PASSPHRASE": "Wrong passphrase! The provided passphrase does not generate the public key assigned to your account!",
-        "WRONG_PIN": "The provided pin does not match the account's pin",
+        "ADDRESS": "Gebe eine gültige Burst Adresse ein !",
+        "COPIED": "{{value}} in die Zwischenablage kopiert !",
+        "DECIMAL_AMOUNT": "Gebe den gewünschten Betrag an Burstcoins als Dezimalzahl ein !",
+        "DECIMAL_FEE": "Gebe eine Gebühr von mindestens 1 Burstcoin ein !",
+        "ENTER_SOMETHING": "Eingabe ist leer !",
+        "EXCEED": "Betrag und Gebühr überschreiten deinen Saldo !",
+        "PIN": "Gebe eine sechstellige Zahl als Pin Code ein !",
+        "REMOVE": "Konto erfolgreich entfernt !",
+        "SELECTED": "Konto {{value}} ausgewählt",
+        "TRANSACTION": "Transaktion erfolgreich !",
+        "UPDATE_CURRENCY": "Währung erfolgreich aktualisiert !",
+        "UDPDATE_LANGUAGE": "Sprache erfolgreich aktualisiert !",
+        "UPDATE_NODE": "Endpunkt erfolgreich aktualisiert !",
+        "WRONG_PASSPHRASE": "Falsche Passphrase ! Die eingegebene Passphrase passt nicht zum öffentlichen Schlüssel deines Kontos !",
+        "WRONG_PIN": "Der eingegebene Pin Code stimmt nicht mit dem Pin Code des Kontos überein !",
         "ERRORS": {
-            "ACCOUNT_ID": "Cannot generate account id from public key!",
-            "ADDRESS": "Cannot generate BURST address from account id!",
-            "CONNECTION": "Failed fetching data. Check your internet connection!",
-            "CURRENCY": "Currency update failed!",
-            "KEYPAIR": "Failed to generate keypair for passphrase!",
-            "LANGUAGE": "Language change failed!",
-            "NODE": "Node update failed!",
-            "QR_CODE": "Could not scan QR code!",
-            "REDIRECT": "Cannot open send BURST page! Current account is not active!",
-            "REMOVE": "Could not remove account!",
-            "UPDATE": "Update of account failed!",
-            "UNKNOWN_ACCOUNT": "Account is still unknown! No transactions yet!"
+            "ACCOUNT_ID": "Fehler beim Generieren der Konto Id !",
+            "ADDRESS": "Fehler beim Generieren der Burst Adresse !",
+            "CONNECTION": "Fehler beim Abrufen der Daten. Überprüfe deine Internetverbindung !",
+            "CURRENCY": "Fehler beim Aktualisieren der Währung !",
+            "KEYPAIR": "Fehler beim Generieren des Schlüsselpaars !",
+            "LANGUAGE": "Fehler beim Ändern der Sprache !",
+            "NODE": "Fehler beim Aktualisieren des Endpunkts !",
+            "QR_CODE": "Kein QR Code gescannt !",
+            "REDIRECT": "Senden von Burstcoin nicht möglich. Ausgewähltes Konto ist kein aktives Konto !",
+            "REMOVE": "Fehler beim Entfernen des Kontos !",
+            "UPDATE": "Fehler beim Aktualisieren des Kontos !",
+            "UNKNOWN_ACCOUNT": "Konto ist noch unbekannt ! Keine Transaktionen gefunden !"
         }
     }
 }
