missing action bar title translation

--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -89,6 +89,7 @@
     },
     "SEND": {
         "ACCEPT": "Akzeptieren",
+        "ACTION_BAR_TITLE": "BURST senden",
         "AMOUNT": "Betrag",
         "BALANCE": "Saldo",
         "FEE": "Gebühr",
