--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -89,6 +89,7 @@
     },
     "SEND": {
         "ACCEPT": "Accept",
+        "ACTION_BAR_TITLE": "Send BURST",
         "AMOUNT": "Amount",
         "BALANCE": "Balance",
         "FEE": "Fee",
