--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -89,7 +89,7 @@
     },
     "SEND": {
         "ACCEPT": "Valider",
-        "ACTION_BAR_TITLE": "Send BURST",
+        "ACTION_BAR_TITLE": "Envoyer des BURST",
         "AMOUNT": "Montant",
         "BALANCE": "Solde",
         "FEE": "Frais",
