--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions.",
         "DONE": "Done",
         "IMPORT": "Import",
-        "INFO": "Import an active account by entering its passphrase ! Otherwise, import an offline account by entering its Burstcoin address !",
+        "INFO": "Import an active account by entering its passphrase. Otherwise, import an offline account by entering its Burstcoin address !",
         "NEXT": "Next",
         "OFFLINE_ACCOUNT": "Offline Account",
         "OFFLINE_ACCOUNT_DESCRIPTION": "An offline account offers the same functionality than an active account, except you cannot send Burstcoins to another address.",
@@ -101,7 +101,7 @@
     "START" : {
         "CREATE": "Create",
         "IMPORT": "Import",
-        "INFO": "No account created yet ! Choose to import an existing account or create a new one !"
+        "INFO": "No account created yet. Choose to import an existing account or create a new one !"
     },
     "NOTIFICATIONS" : {
         "ADDRESS": "Please enter a valid Burstcoin address !",
@@ -117,7 +117,7 @@
         "UPDATE_CURRENCY": "Currency successfully updated !",
         "UDPDATE_LANGUAGE": "Language successfully updated !",
         "UPDATE_NODE": "Node successfully updated !",
-        "WRONG_PASSPHRASE": "Wrong passphrase ! The provided passphrase does not generate the public key assigned to your account !",
+        "WRONG_PASSPHRASE": "Wrong passphrase! The provided passphrase does not generate the public key assigned to your account !",
         "WRONG_PIN": "The provided pin does not match the account's pin !",
         "ERRORS": {
             "ACCOUNT_ID": "Cannot generate account id from public key !",
@@ -131,7 +131,7 @@
             "REDIRECT": "Cannot open send BURST page! Current account is not active !",
             "REMOVE": "Could not remove account !",
             "UPDATE": "Update of account failed !",
-            "UNKNOWN_ACCOUNT": "Account is still unknown ! No transactions yet !"
+            "UNKNOWN_ACCOUNT": "Account is still unknown. No transactions yet !"
         }
     }
 }
