--- a/app/assets/i18n/sk.json
+++ b/app/assets/i18n/sk.json
@@ -1,52 +1,53 @@
 {
     "CREATE": {
-	"ACTION_BAR_TITLE": "Vytvoriť nový účet",
-	"DONE": "Hotovo",
-	"GENERATE_AGAIN": "Znova vygenerovať",
-	"INFO_SEED": "Ťuknite a posuňte prstom po oblasti!",
-	"INFO_SEED_FINISHED": "Vzorky zozbierané!",
-	"INFO_STEP_ONE": "Najskôr vytvorte náhodné vzorky pre vygenerovanie Vašej prístupovej frázy!",
+        "ACTION_BAR_TITLE": "Vytvoriť nový účet",
+        "DONE": "Hotovo",
+        "GENERATE_AGAIN": "Znova vygenerovať",
+        "INFO_SEED": "Ťuknite a posuňte prstom po oblasti!",
+        "INFO_SEED_FINISHED": "Vzorky zozbierané!",
+        "INFO_STEP_ONE": "Najskôr vytvorte náhodné vzorky pre vygenerovanie Vašej prístupovej frázy!",
         "INFO_STEP_TWO": "Teraz si musíte zapamätať všetkých 12 slov Vašej prístupovej frázy a v správnom poradí!",
         "INFO_STEP_TWO_ACTION": "Zapíšte si nasledujúce slová oddelené medzerou a uchovajte si ich na bezpečnom mieste v tajnosti!",
-	"INFO_STEP_THREE": "Zadajte prosím znova slová Vašej prístupovej frázy!",
-	"INFO_STEP_THREE_ACTION": "Zapíšte slovo #{{value}} a vyberte ho!",
+        "INFO_STEP_THREE": "Zadajte prosím znova slová Vašej prístupovej frázy!",
+        "INFO_STEP_THREE_ACTION": "Zapíšte slovo #{{value}} a vyberte ho!",
         "INFO_STEP_FOUR": "Zadajte šesťmiestny pin kód pre svoj účet. PIN kód sa používa na schválenie odchádzajúcich transakcií.",
-	"PIN_INPUT_HINT": "PIN",
+        "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Slovo #{{value}}",
         "NEXT": "Ďalej"
     },
-    "IMPORT" : {
-	"ACTION_BAR_TITLE": "Import existujúceho účtu",
-	"ACTIVE_ACCOUNT": "Aktívny účet",
+    "IMPORT": {
+        "ACTION_BAR_TITLE": "Import existujúceho účtu",
+        "ACTIVE_ACCOUNT": "Aktívny účet",
         "ACTIVE_ACCOUNT_DESCRIPTION": "Aktívny účet je plne funkčný. Môžete posielať a prijímať Burstcoiny. Okrem toho, môžete si skontrolovať zostatok úctu a zobraziť si históriu transakcií.",
         "ACTIVE_ACCOUNT_INPUT_HINT": "Passphrase",
         "ACTIVE_ACCOUNT_PIN_INFO": "Zadajte šesťmiestny pin kód pre svoj účet. PIN kód sa používa na schválenie odchádzajúcich transakcií.",
-	"DONE": "Hotovo",
+        "DONE": "Hotovo",
         "IMPORT": "Import",
         "INFO": "Pre import aktívneho účtu, zadajte jeho prístupovú frázu! Inak importujte účet, spôsobom offline, zadaním jeho Burstcoin adresy!",
         "NEXT": "Ďalej",
         "OFFLINE_ACCOUNT": "Offline účet",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Účet v režime offline ponúka rovnaké funkcie ako aktívny účet, okrem odosielania Burstcoinov na iný účet.",
-	"OFFLINE_ACCOUNT_INPUT_HINT": "BURST-XXXX-XXXX-XXXX-XXXXX",
-	"PIN_INPUT_HINT": "PIN",
-	"SHOW" : {
-	    "QUESTION": "Je to Vaša Burstcoin adresa účtu ?"
+        "OFFLINE_ACCOUNT_INPUT_HINT": "BURST-XXXX-XXXX-XXXX-XXXXX",
+        "PIN_INPUT_HINT": "PIN",
+        "SHOW": {
+            "QUESTION": "Je to Vaša Burstcoin adresa účtu ?"
         }
     },
     "TABS": {
         "ACCOUNTS": {
             "ACTIVATE": {
-		"DONE": "Hotovo",
-		"ENTER_PASSPHRASE": "Sem vložte prístupovú frázu {{value}}!",
+                "ACTION_BAR_TITLE": "Aktivovať účet",
+                "DONE": "Hotovo",
+                "ENTER_PASSPHRASE": "Sem vložte prístupovú frázu {{value}}!",
                 "ENTER_PIN": "Vložte 6 miestny PIN kód!",
-		"PASSPHRASE_INPUT_HINT": "Prístupová fráza",
+                "PASSPHRASE_INPUT_HINT": "Prístupová fráza",
                 "PIN_INPUT_HINT": "Pin",
                 "NEXT": "Ďalej"
             },
             "BALANCE": "Zostatok",
             "CREATE": "Vytvoriť",
             "IMPORT": "Import",
-	    "REMOVE": "Naozaj chcete odstrániť tento účet?",
+            "REMOVE": "Naozaj chcete odstrániť tento účet?",
             "TITLE": "Účty"
         },
         "BALANCE": {
@@ -61,7 +62,7 @@
         "SETTINGS": {
             "ABOUT": {
                 "ABOUT": "O",
-		"ASSOCIATION": "V asociácii s",
+                "ASSOCIATION": "V asociácii s",
                 "DEVELOPED": "Vyvinutý",
                 "TWITTER": "Sledujte náš Twitter a získajte aktuálne informácie o našich projektoch!",
                 "VERSION": "Verzia"
@@ -76,7 +77,7 @@
                 "LANGUAGE": "Jazyk"
             },
             "NODE": {
-		"INFO": "Burst uzol sa používa na komunikáciu so sieťou Burstcoin",
+                "INFO": "Burst uzol sa používa na komunikáciu so sieťou Burstcoin",
                 "NODE": "Uzol"
             },
             "SUPPORT": {
@@ -84,7 +85,7 @@
                 "DONATE": "Páči sa Vám naša aplikácia? Podporujte nás darovaním BURSTCOINOV!",
                 "SUPPORT": "Podpora"
             },
-            "TITLE": "Nastavenia"
+            "TITLE": "Možnosti"
         }
     },
     "SEND": {
@@ -96,12 +97,12 @@
         "PIN_INPUT_HINT": "Pin",
         "VERIFY": "Kontrola"
     },
-    "START" : {
+    "START": {
         "CREATE": "Vytvoriť",
         "IMPORT": "Import",
         "INFO": "Zatiaľ nebol vytvorený účet! Vyberte, či chcete importovať existujúci účet alebo vytvoriť nový účet!"
     },
-    "NOTIFICATIONS" : {
+    "NOTIFICATIONS": {
         "ADDRESS": "Zadajte platnú Burstcoin adresu!",
         "COPIED": "Kopírovať {{value}} do clipboardu!",
         "DECIMAL_AMOUNT": "Zadajte desatinné číslo, koľko BURSTCOINOV chcete odoslať!",
